--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,4 @@
 [build]
-  command = "npm install --force && npm run build"
-  publish = "build"  # use 'dist' if you're using Vite
+  command = "npm install --legacy-peer-deps && npm run build"
+  publish = "build"
+
