--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "npm install --legacy-peer-deps && npm run build"
+  command = "npm install --force && npm run build"
   publish = "build"  # or dist for Vite
 
 [build.environment]
-  NODE_VERSION = "18"
+  NODE_VERSION = "19"
